--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "marvin hezron",
+  "description": "Long live freeCodeCamp",
+  "keywords": [ "freecodecamp", "chesimobile", "rules" ],
+  "license": "ChesiMobile",
+  "version": "1.0.0",
 	"dependencies": {
-	  "express": "^4.14.0"
+	  "express": "^4.14.0",
+    "moment": "2.10.2"
 	},
 	"main": "server.js",
 	"scripts": {
